# medallion-ticket

./: .gitignore
Frontend/: auth.js  clerk.html  login.html  manager.html  patron-service.js  patron_management.html  performance-service.js  production-service.js  production_management.html  seat-service.js  seats.html  ticket-service.js  tickets.html
main/: pyproject.toml
main/src/main/: .env  alembic.ini  auth.py  config.py  database.py  main.py  models.py  schema.py
main/src/main/alembic/: env.py
main/src/main/alembic/versions/: f29abf92690b_initial_migration.py
main/src/main/routers/: employee.py  patron.py  performance.py  production.py  seat.py  ticket.py
