[project]
name = "main"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Hussein",email = "ah0979075074@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "main", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
